--- a/new/index_withoutmapUSA.html
+++ b/new/index_withoutmapUSA.html
@@ -13,11 +13,13 @@
 <div id="anzeige"></div>
 
 <script>
-var bridge=""  //edit here philipshue "http://localhost:8000/api/newdeveloper"
-if(bridge && !location.search) {  //bridge=prompt("change bridge",bridge)||bridge
- light=prompt("select light","1")||"1"}  // "/3" sensor
+var qs=location.search.slice(1)
+if(qs==1) { qs=""  // ?1 enable philipshue
+var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
+bridge=prompt("change bridge adress",bridge)||bridge
+light=prompt("select light","1")||"1" }  // "/3" sensor
 
-var area=location.search.slice(1)||prompt("enter coordinates (0 = \u2316)","48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
+var area=qs||prompt("enter coordinates (0 = \u2316)","48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
 if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
 else getFeatureInfo(area.split(","))
 
@@ -48,7 +50,7 @@ var wl=1; if(max<wl) max=0  //Minor warnlevel edit here
 if(small) content="<span style='color:hsl("+color[max]+",100%,50%)'>&#x25b3; </span>"+ severity[max]  //small view
 document.querySelector("#anzeige").innerHTML=(small?'':"<h2>Official warning</h2>")+(content||"no warnings")+" <a href='https://www.dwd.de/warnungen'>dwd.de</a>" +" <a href='https://www.weather.gov'>NWS</a>"
 
-if(bridge && !location.search) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})
+if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})
 }
 </script>
 
