--- a/new/index_withoutmapUSA.html
+++ b/new/index_withoutmapUSA.html
@@ -10,14 +10,15 @@
 
 </head>
 <body>
-<div id="anzeige"></div>
+<div id="anzeige">Official warning</div>
 
 <script>
+(function(){
 var qs=location.search.slice(1)
 if(qs==1) { qs=""  // ?1 enable philipshue
-var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
-bridge=prompt("change bridge adress",bridge)||bridge
-light=prompt("select light","1")||"1" }  // "/3" sensor
+ var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
+ bridge=prompt("change bridge adress",bridge)||bridge
+ light=prompt("select light","1")||"1" }  // "/3" sensor
 
 var area=qs||prompt("enter coordinates (0 = \u2316)","48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
 if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
@@ -29,10 +30,10 @@ console.log(lat+","+lon)
 var url = lon<0? "https://api.weather.gov/alerts/active?point="+lat+","+lon :  //USA
 "https://maps.dwd.de/geoserver/dwd/wms/?request=GetFeatureInfo&service=WMS&srs=EPSG%3A4326&styles=&transparent=true&version=1.1.1&format=image%2Fpng&bbox="+lon+"%2C"+lat+"%2C"+(1*lon+0.001)+"%2C"+(1*lat+0.001)+"&height=1&width=1&layers=Warnungen_Gemeinden_vereinigt&query_layers=Warnungen_Gemeinden_vereinigt&info_format=application%2Fjson&propertyName=EVENT%2CONSET%2CEXPIRES%2CSENT%2CSEVERITY%2CEC_GROUP%2CSENT&FEATURE_COUNT=50&x=0&y=0"
 
-    var xhr = new XMLHttpRequest()
-    xhr.open("GET", url, true)
-    xhr.onload = function() {var data=JSON.parse(this.response); showGetFeatureInfo(data); setTimeout(function(){getFeatureInfo(ort)}, 300000) }
-    xhr.send()
+ var xhr = new XMLHttpRequest()
+ xhr.open("GET", url, true)
+ xhr.onload = function() {var data=JSON.parse(this.response); showGetFeatureInfo(data); setTimeout(function(){getFeatureInfo(ort)}, 300000) }
+ xhr.send()
 }
 
 function showGetFeatureInfo(data) { var content="", opt={day:"2-digit",month:"2-digit",hour:"2-digit",minute:"2-digit"}
@@ -40,9 +41,9 @@ var severity=["no warnings","Minor","Moderate","Severe","Extreme"], max=0, color
 if(data.features) data.features.forEach(function(item){ item=item.properties
 max=Math.max(max,severity.indexOf(item.severity||item.SEVERITY))
 content += "<p>"+(item.EVENT||item.event)
-+"<br>"+new Date(item.ONSET||item.onset).toLocaleString(data.title?'en-US':'de',opt)  //+" Uhr"
-+"<br>"+new Date(item.EXPIRES||item.expires).toLocaleString(data.title?'en-US':'de',opt)  //+" Uhr"
-+ "</p>"
+ +"<br>"+new Date(item.ONSET||item.onset).toLocaleString(data.title?'en-US':'de',opt)  //+" Uhr"
+ +"<br>"+new Date(item.EXPIRES||item.expires).toLocaleString(data.title?'en-US':'de',opt)  //+" Uhr"
+ + "</p>"
 })
 
 var small=true; small=location.search && small  //edit here false
@@ -52,6 +53,7 @@ document.querySelector("#anzeige").innerHTML=(small?'':"<h2>Official warning</h2
 
 if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})
 }
+})();
 </script>
 
 </body>
