--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -18,12 +18,13 @@
 var qs=location.search.slice(1)
 if(qs==1) { qs=""  // ?1 enable philipshue
  var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
- bridge=prompt("change bridge adress",bridge)||bridge
- light=prompt("select light","1")||"1" }  // "/3" sensor
+ bridge=prompt("change bridge adress\n"+bridge,(localStorage||{}).bridge||bridge)||bridge
+ light=prompt("select light","1")||"1"; localStorage.bridge=bridge }  // "/3" sensor
 
-var area=qs||prompt("enter coordinates (0 = \u2316)","48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
+var area=qs||prompt("enter coordinates (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
 if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
 else getFeatureInfo(area.split(","))
+localStorage.point=area
 
 function getFeatureInfo(ort) {
 var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
@@ -49,7 +50,7 @@ content += "<p>"+(item.EVENT||item.event)
 
 var small=true; small=location.search && small  //edit here false
 var wl=1; if(max<wl) max=0  //Minor warnlevel edit here
-if(small) content="<span style='color:hsl("+color[max]+",100%,50%)'>&#x25b3; </span>"+ severity[max]  //small view
+if(small) content="<a href='https://dj0001.github.io/DWD-Warnmodul-2/?ort="+area+"' target='map' style='color:hsl("+color[max]+",100%,50%); text-decoration:none'>&#x25b3; </a>"+ severity[max]  //small view
 document.querySelector("#anzeige").innerHTML=(small?'':"<h2>Official warning</h2>")+(content||"no warnings")+" <a href='https://www.dwd.de/warnungen'>dwd.de</a>" +" <a href='https://www.weather.gov'>NWS</a>"
 
 if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})
