--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -29,6 +29,7 @@ localStorage.point=area
 function getFeatureInfo(ort) {
 var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
 console.log(lat+","+lon)
+if(lon>0 && (lon<5.8||lon>15||lat<47.2||lat>55)) {showGetFeatureInfo({}); return 0}  //out of bounds
 var url = lon<0? "https://api.weather.gov/alerts/active?point="+lat+","+lon :  //USA
 "https://maps.dwd.de/geoserver/dwd/wms/?request=GetFeatureInfo&service=WMS&srs=EPSG%3A4326&styles=&transparent=true&version=1.1.1&format=image%2Fpng&bbox="+lon+"%2C"+lat+"%2C"+(1*lon+0.001)+"%2C"+(1*lat+0.001)+"&height=1&width=1&layers=Warnungen_Gemeinden_vereinigt&query_layers=Warnungen_Gemeinden_vereinigt&info_format=application%2Fjson&propertyName=EVENT%2CONSET%2CEXPIRES%2CSENT%2CSEVERITY%2CEC_GROUP%2CSENT&FEATURE_COUNT=50&x=0&y=0"
 
