--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -8,13 +8,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="dj0001">
 	<link rel="icon" type="image/png" sizes="192x192" href="icons/warn.png">
-
+<script></script>
 </head>
 <body>
 <div id="anzeige">Official warning</div>
 
 <script>
-(function(){
 var qs=location.search.slice(1)
 if(qs==1) { qs=""  // ?1 enable philipshue
  var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
@@ -23,8 +22,10 @@ if(qs==1) { qs=""  // ?1 enable philipshue
 
 var area=qs||prompt("enter coordinates (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
 if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
-else getFeatureInfo(area.split(","))
+else if(area.match(',')) getFeatureInfo(area.split(","))
+else getFeatureInfo2()  //IT 013
 localStorage.point=area
+/* */
 
 function getFeatureInfo(ort) {
 var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
@@ -58,7 +59,6 @@ document.querySelector("#anzeige").innerHTML=(small?'':"<h2>Official warning</h2
 
 if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})
 }
-})();
 </script>
 
 </body>
