--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -8,7 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="dj0001">
 	<link rel="icon" type="image/png" sizes="192x192" href="icons/warn.png">
-<script></script>
 </head>
 <body>
 <div id="anzeige">Official warning</div>
@@ -18,6 +17,7 @@ var qs=location.search.slice(1), color=[120,60,30,0,330]
 if(qs==1) { qs=""  // ?1 enable philipshue
  var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
  bridge=prompt("change bridge adress\n"+bridge,(localStorage||{}).bridge||bridge)||bridge
+ if(!bridge.match('/')) fetch("https://www.meethue.com/api/nupnp").then(function(response){response.json().then(function(data){if(data[0]) bridge='http://'+data[0].internalipaddress+'/api/'+bridge})})  //olddeveloper
  light=prompt("select light","1")||"1"; localStorage.bridge=bridge }  // "/3" sensor
 
 var area=qs||prompt("enter coordinates (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
