--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -20,10 +20,13 @@ if(qs==1) { qs=""  // ?1 enable philipshue
  if(!bridge.match('/')) fetch("https://www.meethue.com/api/nupnp").then(function(response){response.json().then(function(data){if(data[0]) bridge='http://'+data[0].internalipaddress+'/api/'+bridge})})  //olddeveloper
  light=prompt("select light","1")||"1"; localStorage.bridge=bridge }  // "/3" sensor
 
-var area=qs||prompt("enter coordinates (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
+var area=qs||prompt("enter coordinates or location (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
 if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
 else if(area.match(',')) getFeatureInfo(area.split(","))
-else getFeatureInfo2()  //IT013
+else if(area.match(/^[A-Z]{2}\d?\d?\d?$/)) getFeatureInfo2()  //IT013
+else fetch("https://nominatim.openstreetmap.org/search?q=" + area + "&format=json&limit=1&addressdetails=1")
+ .then(function(response) {response.json().then(function(data) {var cc=data[0].address.country_code
+ if(cc=='de'||cc=='us') getFeatureInfo([data[0].lat,data[0].lon]); else {area=prompt("enter meteoalarm region (IT013)",cc.toUpperCase())||cc; getFeatureInfo2()} })})
 localStorage.point=area
 
 function getFeatureInfo2() {
