--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -22,11 +22,11 @@ if(qs==1) { qs=""  // ?1 enable philipshue
 
 var area=qs||prompt("enter coordinates or location (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
 if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
-else if(area.match(',')) getFeatureInfo(area.split(","))
-else if(area.match(/^[A-Z]{2}\d?\d?\d?$/)) getFeatureInfo2()  //IT013
+else if(area.match(/^[\d,-\.]+$/)) getFeatureInfo(area.split(","))
+else if(area.match(/^[A-Z]{2}(\d|$)/)) getFeatureInfo2()  //IT013
 else fetch("https://nominatim.openstreetmap.org/search?q=" + area + "&format=json&limit=1&addressdetails=1")
  .then(function(response) {response.json().then(function(data) {var cc=data[0].address.country_code
- if(cc=='de'||cc=='us') getFeatureInfo([data[0].lat,data[0].lon]); else {area=prompt("enter meteoalarm region (IT013)",cc.toUpperCase())||cc; getFeatureInfo2()} })})
+ if(cc=='de'||cc=='us') getFeatureInfo([data[0].lat,data[0].lon]); else {area=cc; getFeatureInfo2()} })})
 localStorage.point=area
 
 function getFeatureInfo2() {
@@ -38,7 +38,7 @@ var dsc=data.items[0].description; document.querySelector("#anzeige").innerHTML=
 function getFeatureInfo(ort) {
 var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
 console.log(lat+","+lon)
-if(lon>0 && (lon<5.8||lon>15||lat<47.2||lat>55)) {showGetFeatureInfo({}); return 0}  //out of bounds
+if(lon>-10 && (lon<5.8||lon>15||lat<47.2||lat>55)) {document.querySelector("#anzeige").innerHTML='enter meteoalarm region (IT013)'; return 0}  //out of bounds
 var url = lon<0? "https://api.weather.gov/alerts/active?point="+lat+","+lon :  //USA
 "https://maps.dwd.de/geoserver/dwd/wms/?request=GetFeatureInfo&service=WMS&srs=EPSG%3A4326&styles=&transparent=true&version=1.1.1&format=image%2Fpng&bbox="+lon+"%2C"+lat+"%2C"+(1*lon+0.001)+"%2C"+(1*lat+0.001)+"&height=1&width=1&layers=Warnungen_Gemeinden_vereinigt&query_layers=Warnungen_Gemeinden_vereinigt&info_format=application%2Fjson&propertyName=EVENT%2CONSET%2CEXPIRES%2CSENT%2CSEVERITY%2CEC_GROUP&FEATURE_COUNT=50&x=0&y=0"
 
