--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -21,13 +21,15 @@ if(qs==1) { qs=""  // ?1 enable philipshue
  light=prompt("select light","1")||"1"; localStorage.bridge=bridge }  // "/3" sensor
 
 var area=qs||prompt("enter coordinates or location (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
-if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
+if(area==0||area==1) locate(); 
 else if(area.match(/^[\d,-\.]+$/)) getFeatureInfo(area.split(","))
 else if(area.match(/^[A-Z]{2}(\d|$)/)) getFeatureInfo2()  //IT013
 else fetch("https://nominatim.openstreetmap.org/search?q=" + area + "&format=json&limit=1&addressdetails=1")
  .then(function(response) {response.json().then(function(data) {var cc=data[0].address.country_code
  if(cc=='de'||cc=='us') getFeatureInfo([data[0].lat,data[0].lon]); else {area=cc; getFeatureInfo2()} })})
 localStorage.point=area
+
+function locate(){navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)})}
 
 function getFeatureInfo2() {
 fetch('https://api.rss2json.com/v1/api.json?rss_url=https://meteoalarm.eu/documents/rss/'+area.slice(0,2).toLowerCase()+(area[2]?'/'+area:'')+'.rss')
@@ -44,7 +46,7 @@ var url = lon<0? "https://api.weather.gov/alerts/active?point="+lat+","+lon :  /
 
  var xhr = new XMLHttpRequest()
  xhr.open("GET", url, true)
- xhr.onload = function() {var data=JSON.parse(this.response); showGetFeatureInfo(data); setTimeout(function(){getFeatureInfo(ort)}, 300000) }
+ xhr.onload = function() {var data=JSON.parse(this.response); showGetFeatureInfo(data); setTimeout(function(){area==1?locate():getFeatureInfo(ort)}, 300000) }  //1 watch-geo
  xhr.send()
 }
 
