--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -13,7 +13,7 @@
 <div id="anzeige">Official warning</div>
 
 <script>
-var qs=location.search.slice(1), color=[120,60,30,0,330]
+var qs=location.search.slice(1), color=[120,60,30,0,330,270]
 if(qs==1) { qs=""  // ?1 enable philipshue
  var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
  bridge=prompt("change bridge adress\n"+bridge,(localStorage||{}).bridge||bridge)||bridge
@@ -30,7 +30,7 @@ localStorage.point=area
 
 function locate(){navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)})}
 
-function showGetFeatureInfo2(data) {var dsc=data.items[0].description; document.querySelector("#anzeige").innerHTML=data.feed.title+'<br>'+dsc; hue(dsc.match(/level:(\d)/)[1]-1)}
+function showGetFeatureInfo2(data) {var dsc=data.items[0].description; document.querySelector("#anzeige").innerHTML=data.feed.title+'<br>'+dsc; hue(dsc.match('awt:5 level:2')?5:dsc.match(/level:(\d)/)[1]-1)}  //5=Heat
 
 function getFeatureInfo(ort,cc) {
 var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
@@ -64,7 +64,7 @@ var small=true; small=location.search && small  //edit here false
 var wl=1; if(max<wl) max=0  //Minor warnlevel edit here
 if(small) content="<a href='https://dj0001.github.io/DWD-Warnmodul-2/?ort="+area+"' target='map' style='color:hsl("+color[max]+",100%,50%); text-decoration:none'>&#x25b3; </a>"+ severity[max]  //small view
 document.querySelector("#anzeige").innerHTML=(small?'':area+"<h2>Official warning</h2>")+(content||"no warnings")+" <a href='https://www.dwd.de/warnungen'>dwd.de</a>" +" <a href='https://www.weather.gov'>NWS</a>"
-hue(max)
+hue(max<=2&&data.features[0]&&data.features[0].properties.event=='Heat Advisory'?5: max)
 }
 
 function hue(max) {if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})}
