--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -67,7 +67,7 @@ document.querySelector("#anzeige").innerHTML=(small?'':area+"<h2>Official warnin
 hue(max<=2&&data.features[0]&&data.features[0].properties.event=='Heat Advisory'?5: max)
 }
 
-function hue(max) {if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})}
+function hue(max) {if(location.search.slice(1)==1) fetch(bridge+'/'+(isNaN(light)?'sensors':'lights/')+light+'/state',{method:"PUT",body:isNaN(light)?'{"status":'+max+'}':'{"hue":'+182*color[max]+'}',headers:{'Content-Type':'application/json'}})}  //,"on":true
 </script>
 
 </body>
