--- a/new/noaa/index_withoutmapUSA.html
+++ b/new/noaa/index_withoutmapUSA.html
@@ -18,7 +18,7 @@ document.body.onclick=function(){audio=new Audio(); audio.src='https://raw.githu
 if(qs==1) { qs=""  // ?1 enable philipshue
  var bridge="http://localhost:8000/api/newdeveloper"  //edit here https://localhost:443/api/newdeveloper
  bridge=prompt("change bridge adress\n"+bridge,(localStorage||{}).bridge||bridge)||bridge
- if(!bridge.match('/')) fetch("https://www.meethue.com/api/nupnp").then(function(response){response.json().then(function(data){if(data[0]) bridge='http://'+data[0].internalipaddress+'/api/'+bridge})})  //olddeveloper
+ if(!bridge.match('/')) fetch("https://discovery.meethue.com").then(function(response){response.json().then(function(data){if(data[0]) bridge='http://'+data[0].internalipaddress+'/api/'+bridge})})  //olddeveloper
  light=prompt("select light","1")||"1"; localStorage.bridge=bridge }  // "/3" sensor
 
 var area=qs||prompt("enter coordinates or location (0 = \u2316)",(localStorage||{}).point||"48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
